--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.4.1",
     "com.unity.mathematics": "1.2.6",
+    "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.arcore": "5.0.2",
     "com.unity.xr.arfoundation": "5.0.2",
